add morrison model and small font size

--- a/slides/talk2.html
+++ b/slides/talk2.html
@@ -156,6 +156,37 @@ __Ratajski, L.__, (1967) _Phenomenes des points de generalisation_, Internationa
 
 ---
 
+## Модели генерализации
+
+.left-column[
+&lt;div class="figure"&gt;
+&lt;img src="img/talk2/Morrison.png" alt="Joel L. Morrison, Professor Emeritus, Ohio State University" width="200px" /&gt;
+&lt;p class="caption"&gt;Joel L. Morrison, Professor Emeritus, Ohio State University&lt;/p&gt;
+&lt;/div&gt;
+]
+
+.right-column[
+
+.large[Американский картограф Джоэл Моррисон предложил модель генерализации, основанную на теории множеств]
+
+__Morrison, J. L.__, (1974) _A theoretical framework for cartographic generalization with emphasis on the process of symbolization_, International Yearbook of Cartography, 14, 115–127.
+
+]
+
+---
+
+## Модель Моррисона
+
+.left-column[
+__Morrison, J. L.__, (1974) _A theoretical framework for cartographic generalization with emphasis on the process of symbolization_, International Yearbook of Cartography, 14, 115–127.
+]
+
+.right-column[
+&lt;img src="img/talk2/MorrisonModel.png" width="800px" /&gt;
+]
+
+---
+
 ## Литература
 
 ### 1991
