finalize comceptual models presentation

--- a/slides/talk2.html
+++ b/slides/talk2.html
@@ -136,7 +136,7 @@ __Виды генерализации:__
 ]
 
 .right-column[
-.large[Польский картограф Лех Ратайский предлагал разделять качественную и количественную генерализацию]
+.large[__1967__ — Польский картограф Лех Ратайский предлагал разделять качественную и количественную генерализацию]
 
 __Ratajski, L.__, (1967) _Phenomenes des points de generalisation_, International Yearbook of Cartography, 7, 143–151.
 
@@ -167,7 +167,7 @@ __Ratajski, L.__, (1967) _Phenomenes des points de generalisation_, Internationa
 
 .right-column[
 
-.large[Американский картограф Джоэл Моррисон предложил модель генерализации, основанную на теории множеств]
+.large[__1974__ — Американский картограф Джоэл Моррисон предложил модель генерализации, основанную на теории множеств]
 
 __Morrison, J. L.__, (1974) _A theoretical framework for cartographic generalization with emphasis on the process of symbolization_, International Yearbook of Cartography, 14, 115–127.
 
@@ -177,12 +177,142 @@ __Morrison, J. L.__, (1974) _A theoretical framework for cartographic generaliza
 
 ## Модель Моррисона
 
-.left-column[
+&lt;img src="img/talk2/MorrisonModel.png" width="800px" /&gt;
+
 __Morrison, J. L.__, (1974) _A theoretical framework for cartographic generalization with emphasis on the process of symbolization_, International Yearbook of Cartography, 14, 115–127.
+
+---
+
+## Модели генерализации
+
+.left-column[
+&lt;div class="figure"&gt;
+&lt;img src="img/talk2/Nickerson.png" alt="Bradford G. Nickerson Professor Emeritus, University of New Brunswick" width="200px" /&gt;
+&lt;p class="caption"&gt;Bradford G. Nickerson Professor Emeritus, University of New Brunswick&lt;/p&gt;
+&lt;/div&gt;
 ]
 
 .right-column[
-&lt;img src="img/talk2/MorrisonModel.png" width="800px" /&gt;
+
+.large[__1988__ — Канадский картограф Брэдфорд Никерсон предложил модель на основе правил]
+- Модификация объектов.
+- Масштабирование символов.
+- Смещение объектов.
+- Уменьшение масштаба.
+- Размещение подписей.
+
+.small[__Nickerson, B. G., and Freeman, H.__, (1986) _Development of a Rule-Based System for Automatic Map Generalization_, Proceedings of the Second International Symposium on Spatial Data Handling, Seattle, Washington, July 5–10, pp. 537–556.]
+
+]
+
+---
+
+## Модель Никерсона-Фримена
+
+&lt;img src="img/talk2/NickersonModel.png" width="1000px" /&gt;
+
+.small[__Nickerson, B. G., and Freeman, H.__, (1986) _Development of a Rule-Based System for Automatic Map Generalization_, Proceedings of the Second International Symposium on Spatial Data Handling, Seattle, Washington, July 5–10, pp. 537–556.]
+
+---
+
+## Модели генерализации
+
+.left-column[
+&lt;div class="figure"&gt;
+&lt;img src="img/talk2/Brassel.png" alt="Kurt Brassel, Professor Emeritus, University of Zurich" width="100%" /&gt;
+&lt;p class="caption"&gt;Kurt Brassel, Professor Emeritus, University of Zurich&lt;/p&gt;
+&lt;/div&gt;
+]
+
+.right-column[
+
+.large[__1988__ —  Курт Брассель и Роберт Вайбель (Швейцария) предложили модель на основе библиотеки процессов]
+
+__Brassel, K. E., and Weibel, R.__, (1988) _A Review and Conceptual Framework of Automated Map Generalization_, International Journal of Geographical Information Systems, 2(3), 229–244.
+
+]
+
+---
+
+## Модель Брасселя-Вайбеля
+
+.left-column[
+__Brassel, K. E., and Weibel, R.__, (1988) _A Review and Conceptual Framework of Automated Map Generalization_, International Journal of Geographical Information Systems, 2(3), 229–244.
+]
+
+.right-column[
+&lt;img src="img/talk2/BrasselModel.png" width="650px" /&gt;
+]
+
+---
+
+## Модели генерализации
+
+.left-column[
+&lt;div class="figure"&gt;
+&lt;img src="img/talk2/McMaster.png" alt="Robert McMaster, Professor of Geography, University of Minnesota" width="100%" /&gt;
+&lt;p class="caption"&gt;Robert McMaster, Professor of Geography, University of Minnesota&lt;/p&gt;
+&lt;/div&gt;
+]
+
+.right-column[
+
+.large[__1988__ —  МакМастер и Ши (США) предложили модель, в которой логика генерализации разделена на три аспекта]
+
+- Причины генерализации
+- Оценка контекста
+- Операторы трансформации
+
+.small[__McMaster, R. B., and Shea, K. S.__, (1988) _Cartographic Generalization in a Digital Environment: A Framework for Implementation in a Geographic Information System_, GIS/LIS’88 Proceedings, San Antonio, Texas, November 30 – December 2, pp. 240–249.]
+
+]
+
+---
+
+## Модель МакМастера-Ши
+
+.left-column[
+__McMaster, R. B., and Shea, K. S.__, (1988) _Cartographic Generalization in a Digital Environment: A Framework for Implementation in a Geographic Information System_, GIS/LIS’88 Proceedings, pp. 240–249.
+]
+
+.right-column[
+&lt;img src="img/talk2/McMasterModel.png" width="450px" /&gt;
+]
+
+---
+
+## Модели генерализации
+
+.left-column[
+&lt;div class="figure"&gt;
+&lt;img src="img/talk2/Monmonier.png" alt="Mark Monmonier Distinguished Professor Syracuse University" width="100%" /&gt;
+&lt;p class="caption"&gt;Mark Monmonier Distinguished Professor Syracuse University&lt;/p&gt;
+&lt;/div&gt;
+]
+
+.right-column[
+
+.large[__1989__ —  МакМастер и Монмонье (США) предложили модель растровой генерализации, в которой выделили 4 категории трансформаций:]
+
+- Структурная
+- Количественная
+- Количественно-категорийная
+- Категорийная
+
+.small[__McMaster, R. B., Monmonier, M. S.__, (1989) _A conceptual framework for quantitative and qualitative raster-mode generalization_, Proceedings of GIS/LIS ’89, Orlando, Florida, 2, pp. 390–403.]
+
+]
+
+---
+
+## Модель МакМастера-Монмонье
+
+.left-column[
+__McMaster, R. B., Monmonier, M. S.__, (1989) _A conceptual framework for quantitative and qualitative raster-mode generalization_, Proceedings of GIS/LIS ’89, Orlando, Florida, 2, pp. 390–403.
+]
+
+.right-column[
+&lt;img src="img/talk2/MonmonierModel.png" width="350px" /&gt;
 ]
 
 ---
@@ -192,7 +322,7 @@ __Morrison, J. L.__, (1974) _A theoretical framework for cartographic generaliza
 ### 1991
 
 .left-column[
-&lt;img src="img/talk2/t1_gen1991.png" width="150px" /&gt;
+&lt;img src="img/talk2/t1_gen1991.png" width="100%" /&gt;
 ]
 
 .right-column[
@@ -206,7 +336,7 @@ __Morrison, J. L.__, (1974) _A theoretical framework for cartographic generaliza
 ### 1995
 
 .left-column[
-&lt;img src="img/talk2/t1_gen1995.png" width="150px" /&gt;
+&lt;img src="img/talk2/t1_gen1995.png" width="100%" /&gt;
 ]
 
 .right-column[
@@ -220,7 +350,7 @@ __Morrison, J. L.__, (1974) _A theoretical framework for cartographic generaliza
 ### 2006
 
 .left-column[
-&lt;img src="img/talk2/t1_gen2006.png" width="150px" /&gt;
+&lt;img src="img/talk2/t1_gen2006.png" width="100%" /&gt;
 ]
 
 .right-column[
@@ -234,7 +364,7 @@ __Morrison, J. L.__, (1974) _A theoretical framework for cartographic generaliza
 ### 2007
 
 .left-column[
-&lt;img src="img/talk2/t1_gen2007.png" width="150px" /&gt;
+&lt;img src="img/talk2/t1_gen2007.png" width="100%" /&gt;
 ]
 
 .right-column[
@@ -249,7 +379,7 @@ __Morrison, J. L.__, (1974) _A theoretical framework for cartographic generaliza
 ### 2014
 
 .left-column[
-&lt;img src="img/talk2/t1_gen2014.png" width="150px" /&gt;
+&lt;img src="img/talk2/t1_gen2014.png" width="100%" /&gt;
 ]
 
 .right-column[
@@ -263,7 +393,7 @@ __Morrison, J. L.__, (1974) _A theoretical framework for cartographic generaliza
 ### 2019
 
 .left-column[
-&lt;img src="img/talk2/t1_gen2019.png" width="150px" /&gt;
+&lt;img src="img/talk2/t1_gen2019.png" width="100%" /&gt;
 ]
 
 .right-column[
