--- a/slides/talk3_PointSelection.html
+++ b/slides/talk3_PointSelection.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
+<html lang="" xml:lang="">
   <head>
     <title>Отбор точечных объектов</title>
     <meta charset="utf-8" />
     <meta name="author" content="Тимофей Самсонов" />
-    <meta name="date" content="2019-09-09" />
+    <meta name="date" content="2020-02-20" />
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
@@ -13,9 +13,9 @@
 class: center, middle, inverse, title-slide
 
 # Отбор точечных объектов
-## Картографические базы данных. Лекция №3
+## Геоинформационное картографирование
 ### Тимофей Самсонов
-### 2019-09-09
+### 2020-02-20
 
 ---
 
@@ -170,6 +170,67 @@ class: center, middle, inverse, title-slide
 
 ---
 
+##  Параметризация масштабного коэффициента `\(C\)`
+
+В методе Settlement spacing нельзя явным образом задать процент отбора точек или их желаемую густоту.
+
+Характер расселения влияет на интенсивность отбора населенных пунктов при различных значениях `\(C\)`.
+
+Чтобы установить характер этой зависимости и управлять интенсивностью отбора, необходимо для выбранной территории построить регрессионную модель зависимости между коэффициентом `\(C\)` и результирующей графической нагрузкой.
+
+&lt;img src="img/talk3/stl-spacing.png" width="80%" /&gt;
+
+---
+
+##  Условная графическая нагрузка
+
+_Условная графическая нагрузка_ – взвешенное количество точек на единицу площади карты:
+
+`$$\rho = \frac{\sum_k w_k N_k}{A},$$`
+где `\(N_k\)` — количество точек `\(k\)`-го класса, `\(w_k\)` — весовой коэффициент `\(k\)`-го класса, который прямо пропорционален размеру значка, `\(A\)` — площать расчетной ячейки (в `\(см^2\)` карты).
+
+&gt; В знаменателе формулы стоит площадь на карте, а не на местности.
+
+_Средняя условная графическая нагрузка_ рассчитывается путем осреднения нагрузки по ячейкам регулярной сети.
+
+---
+
+##  Средняя условная графическая нагрузка
+
+&lt;img src="img/talk3/mean_density.png" width="100%" /&gt;
+
+_Средняя условная графическая нагрузка_ рассчитывается путем осреднения условной графической нагрузки по ячейкам регулярной сети.
+
+---
+
+##  Параметризация масштабного коэффициента `\(C\)`
+
+Алгоритм построения модели:
+
+1. Построить регулярную сетку с шагом `\(h\)`, покрывающую заданное множество точек.
+
+2. Выполнить серию генерализаций множества точек путем отбора при разных значениях `\(C\)`.
+
+  &gt; например, от `\(1000\)` до `\(10000\)` м с шагом `\(1000\)` м.
+
+3. Для каждого уровня детализации рассчитать среднюю графическую нагрузку.
+
+4. Построить регрессионную зависимость вида `\(y = \alpha x^{-\beta},\)` где `\(y\)` — величина условной графической нагрузки, `\(x\)` — значение константы `\(C\)`.
+
+---
+
+##  Параметризация масштабного коэффициента `\(C\)`
+
+&lt;img src="img/talk3/stl-param.png" width="80%" /&gt;
+
+---
+
+##  Параметризация масштабного коэффициента `\(C\)`
+
+&lt;img src="img/talk3/mean_density.png" width="100%" /&gt;
+
+---
+
 ## Алгоритм Circle-growth
 
 Радиус окружности `\(R = C \times W_i\)` прямо пропорционален весу точки `\(W_i\)`.
@@ -185,39 +246,24 @@ class: center, middle, inverse, title-slide
 
 ## Алгоритм эффективной площади
 
-2. Построить диаграмму Вороного точек в пределах минимальной оболочки.
-
-3. Вычислить веса каждой точки обратно пропорционально площади ее ячейки Вороного `\(W_i = A_i^{-1}\)`. Пометить все точки как активные.
-
-4. Удалить активную точку с наименьшим весом.
-
-5. Перестроить локально диаграмму Вороного для соседей точки первого порядка. Деактивировать соседей (запретить их удаление).
-
-6. Повторять шаги 4-5 для оставшихся точек, пока не будут деактивированы все точки или пока не будет достигнут требуемый процент отбора.
-
-7. Если не достигнут требуемый процент отбора точек, активировать все точки и перейти к шагу 4. В противном случае завершить обработку
-
-&lt;!-- **Ai T., Liu Y.**  *A method of point cluster simplification with spatial distribution properties preserved*, Acta Geodaetica et Cartographica Sinica, 25(1), 35–41, 2002. --&gt;
-
----
-
-## Алгоритм эффективной площади
+Данный алгоритм основан на удалении точек, которым соответствуют малые по площади ячейки диаграммы Вороного.
 
 .pull-left[
 **До:**
-&lt;img src="img/talk3/effa_source.png" width="90%" /&gt;
-]
 
+&lt;img src="img/talk3/effa_source.png" width="65%" /&gt;
+]
 .pull-right[
 **После:**
-&lt;img src="img/talk3/effa_result.png" width="90%" /&gt;
+
+&lt;img src="img/talk3/effa_result.png" width="65%" /&gt;
 ]
 
 .small[**Ai T., Liu Y.**  *A method of point cluster simplification with spatial distribution properties preserved*, Acta Geodaetica et Cartographica Sinica, 25(1), 35–41, 2002.]
 
 ---
 
-## Локальное перестроение диаграммы Вороного
+## Перестроение диаграммы при удалении точки
 
 &lt;img src="img/talk3/effa_recalc.png" width="80%" /&gt;
 
@@ -228,9 +274,49 @@ class: center, middle, inverse, title-slide
 
 ---
 
+## Алгоритм эффективной площади
+
+2. Построить диаграмму Вороного точек в пределах минимальной оболочки.
+
+3. Вычислить веса каждой точки прямо пропорционально площади ее ячейки Вороного `\(W_i = A_i\)`. Пометить все точки как активные.
+
+4. Удалить активную точку с наименьшим весом.
+
+5. Перестроить локально диаграмму Вороного для соседей точки первого порядка. Деактивировать соседей (запретить их удаление).
+
+6. Повторять шаги 3-4 для оставшихся точек, пока не будут деактивированы все точки или пока не будет достигнут требуемый процент отбора.
+
+7. Если не достигнут требуемый процент отбора точек, активировать все точки и перейти к шагу 3. В противном случае завершить обработку
+
+&lt;!-- **Ai T., Liu Y.**  *A method of point cluster simplification with spatial distribution properties preserved*, Acta Geodaetica et Cartographica Sinica, 25(1), 35–41, 2002. --&gt;
+
+---
+
+## Алгоритм эффективной площади
+
+.pull-left[
+**До:**
+
+&lt;img src="img/talk3/effa_source.png" width="90%" /&gt;
+]
+
+.pull-right[
+**После:**
+
+&lt;img src="img/talk3/effa_result.png" width="90%" /&gt;
+]
+
+.small[**Ai T., Liu Y.**  *A method of point cluster simplification with spatial distribution properties preserved*, Acta Geodaetica et Cartographica Sinica, 25(1), 35–41, 2002.]
+
+---
+
 ## Алгоритм взвешенной эффективной площади
 
-Вес точки масштабируется пропорционально ее значимости, а не только эффективной площади: `\(W_i = С_i \times A_i^{-1}\)`, где параметр `\(С_i\)` можно представить как средневзвешенную сумму баллов за факторы:
+Вес точки масштабируется пропорционально ее значимости, а не только эффективной площади: 
+
+`$$W_i = С_i \times A_i,$$` 
+
+где параметр `\(С_i\)` можно представить как средневзвешенную сумму баллов за факторы:
 
 `$$С_i = \frac{\sum w_j f_{ij}}{\sum w_j}$$`
 
@@ -376,7 +462,24 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     }
     deleted = true;
   });
-})();</script>
+})();
+// adds .remark-code-has-line-highlighted class to <pre> parent elements
+// of code chunks containing highlighted lines with class .remark-code-line-highlighted
+(function(d) {
+  const hlines = d.querySelectorAll('.remark-code-line-highlighted');
+  const preParents = [];
+  const findPreParent = function(line, p = 0) {
+    if (p > 1) return null; // traverse up no further than grandparent
+    const el = line.parentElement;
+    return el.tagName === "PRE" ? el : findPreParent(el, ++p);
+  };
+
+  for (let line of hlines) {
+    let pre = findPreParent(line);
+    if (pre && !preParents.includes(pre)) preParents.push(pre);
+  }
+  preParents.forEach(p => p.classList.add("remark-code-has-line-highlighted"));
+})(document);</script>
 
 <script>
 (function() {
