--- a/slides/talk5_PointAggregation.html
+++ b/slides/talk5_PointAggregation.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
+<html lang="" xml:lang="">
   <head>
     <title>Регионизация точечных объектов</title>
     <meta charset="utf-8" />
     <meta name="author" content="Тимофей Самсонов" />
-    <meta name="date" content="2019-09-30" />
+    <meta name="date" content="2020-03-05" />
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
@@ -13,9 +13,9 @@
 class: center, middle, inverse, title-slide
 
 # Регионизация точечных объектов
-## Картографические базы данных. Лекция №5
+## Геоинформационное картографирование
 ### Тимофей Самсонов
-### 2019-09-30
+### 2020-03-05
 
 ---
 
@@ -78,7 +78,7 @@ class: center, middle, inverse, title-slide
 
 2. Найти точку `\(p_1\)`, образующую наименьший угол поворота по часовой стрелке относительно направления оси `\(Y\)`. Добавить в результат.
 
-3. Найти все оставшиеся точки выпуклой оболочки `\(p_i, i = 2..k\)`, выбирая каждый раз такую точку `\(p_i\)`, что угол поворота от `\(p_{i-2} p_{i-1}\)` к `\(p_{i-2} p_{i-1}\)` наименьший. Остановиться, когда `\(p_i = p_0\)`
+3. Найти все оставшиеся точки выпуклой оболочки `\(p_i, i = 2..k\)`, выбирая каждый раз такую точку `\(p_i\)`, что угол поворота от `\(p_{i-2} p_{i-1}\)` к `\(p_{i-1} p_{i}\)` наименьший. Остановиться, когда `\(p_i = p_0\)`
 ]
 
 .right-40[
@@ -216,7 +216,24 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     }
     deleted = true;
   });
-})();</script>
+})();
+// adds .remark-code-has-line-highlighted class to <pre> parent elements
+// of code chunks containing highlighted lines with class .remark-code-line-highlighted
+(function(d) {
+  const hlines = d.querySelectorAll('.remark-code-line-highlighted');
+  const preParents = [];
+  const findPreParent = function(line, p = 0) {
+    if (p > 1) return null; // traverse up no further than grandparent
+    const el = line.parentElement;
+    return el.tagName === "PRE" ? el : findPreParent(el, ++p);
+  };
+
+  for (let line of hlines) {
+    let pre = findPreParent(line);
+    if (pre && !preParents.includes(pre)) preParents.push(pre);
+  }
+  preParents.forEach(p => p.classList.add("remark-code-has-line-highlighted"));
+})(document);</script>
 
 <script>
 (function() {
