--- a/slides/talk4_PointClustering.html
+++ b/slides/talk4_PointClustering.html
@@ -4,7 +4,7 @@
     <title>Кластеризация точечных объектов</title>
     <meta charset="utf-8" />
     <meta name="author" content="Тимофей Самсонов" />
-    <meta name="date" content="2020-03-05" />
+    <meta name="date" content="2020-03-12" />
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
@@ -15,7 +15,7 @@ class: center, middle, inverse, title-slide
 # Кластеризация точечных объектов
 ## Геоинформационное картографирование
 ### Тимофей Самсонов
-### 2020-03-05
+### 2020-03-12
 
 ---
 
@@ -809,7 +809,7 @@ __Пример неудачной кластеризации:__
 
 ### Выбор параметров
 
-.pull-left[Для определения оптимальной величины `\(\epsilon\)` рекомендуется построить функцию среднего расстояния до `\(minPts-1\)` ближайших соседей в зависимости от `\(\epsilon\)`. Оптимальными считаются значения `\(\epsilon\)`, при которых наблюдается наиболее интенсивное изменение роста функции (перегиб)]
+.pull-left[Для определения оптимальной величины `\(eps\)` рекомендуется построить функцию среднего расстояния до `\(minPts-1\)` ближайших соседей в зависимости от `\(eps\)`. Оптимальными считаются значения `\(eps\)`, при которых наблюдается наиболее интенсивное изменение роста функции (перегиб)]
 
 .pull-right[
 &lt;img src="img/talk3/dbscan_eselect.png" width="100%" /&gt;
